# FirstC

./: .gitignore  CMakeLists.txt  Makefile.am  build.sh  configure.ac  start.sh
include/: CMakeLists.txt  liba.h  libb.h
libs/: CMakeLists.txt  Makefile.am  liba.c  libb.c
src/: CMakeLists.txt  Makefile.am  main  main.c
